# Nfactorial

./: BlackPaper.py  Hehe.py  README.md  file1.txt  hw.sql  shadow_output.txt
ascii-art-project-1-doctorrin-main/: main.py  output.txt
ascii_art_project_1_doctorrin_main/: main.py  output.txt
assigment14/: main_copy.py  pyproject.toml  tempCodeRunnerFile.py  test_ascii_art.py  test_main.py
assigment6/: main.py
hw-10-11-doctorrin-master/: hw.py  tempCodeRunnerFile.py
hw-12-doctorrin-master/: hw.py  test_hw.py
hw-15/: hw.py  tempCodeRunnerFile.py  test_hw.py
hw-16/: hw.py  test_hw.py
hw-7-updated-doctorrin-master/: hw.py  hw_bonus.py
hw-8-updated-doctorrin-master/: hw.py
hw-9-nfactorial-school-main/: README.md  hw.py  tempCodeRunnerFile.py
hw-back-4/: pyproject.toml
hw-back-6/: main.py  pyproject.toml
hw-back-6/api/: flower.py  user.py
hw-back-6/models/: flowers.py
hw-back-6/repository/: cart.py  flowers.py
hw-back-6/templates/: flowers.html  profile.html
hw-backend-1/: factorial_api.py  fast_api_hello.py  meaning_of_life.py  ping_pong.py  (+1 more)
hw_back_5/: main.py  pyproject.toml
hw_back_5/api/: books.py
hw_back_5/repository/: books.py
hw_back_5/templates/books/: delete.html  edit.html  show.html
hw_back_8/: alembic.ini  database.py  dockerfile  main.py  pyproject.toml  railway.json
hw_back_8/alembic/: env.py
hw_back_8/alembic/versions/: 83bb8d07c8d1_create_users_table.py  f204a6d837a4_updated_flower.py
hw_back_8/api/: cart.py  flower.py  user.py
hw_back_8/app/: main.py
hw_back_8/app/alembic/: env.py
hw_back_8/app/alembic/versions/: ba687a18dc71_create_flower_table.py
hw_back_8/app/api/: cart.py  flower.py  user.py
hw_back_8/app/models/: flower.py  user.py
hw_back_8/app/repository/: cart.py  flower.py  user.py
hw_back_8/app/schemas/: user.py
hw_back_8/app/templates/: cart.html  flowers.html  login.html  profile.html
hw_back_8/models/: flower.py  user.py
hw_back_8/repository/: user.py
hw_back_8/schemas/: flower.py
hw_back_8/templates/: signup.html
project_1_voxpop/vox_pop/app/: comments.py  main.py  pyproject.toml
(+62 files in other folders)
