[tool.poetry]
name = "hw-back-8"
version = "0.1.0"
description = ""
authors = ["Zhangeldi <zhanikshakimurat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.6"
utils = "^1.0.2"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
security = "^1.3.1"
jwt = "^1.3.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
