[tool.poetry]
name = "vox-box"
version = "0.1.0"
description = ""
authors = ["Zhangeldi <zhanikshakimurat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^33.3.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
attrs = "^24.3.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
